<resources>
    <string name="app_name">Crud Android</string>
    <string name="nome">Nome</string>
    <string name="valor">Valor</string>
    <string name="categoria">Categoria</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">VOLTAR HOME</string>
    <string name="sair">SAIR</string>
    <string name="listar_produtos">LISTAR/EXCLUIR/EDITAR PRODUTOS</string>
    <string name="cadastrar_produto">CADASTRAR PRODUTO</string>
    <string name="crud_android_sqlite">CRUD-ANDROID/SQLITE</string>
    <string name="pesquisar">Pesquisar</string>
</resources>
